tests/baselines/reference/classdecl(strict=true).errors.txt
classdecl.ts(11,12): error TS7008: Member 'pv' implicitly has an 'any' type.
classdecl.ts(27,13): error TS7008: Member 'pv3' implicitly has an 'any' type.
classdecl.ts(70,12): error TS7008: Member 'pv' implicitly has an 'any' type.
classdecl.ts(73,12): error TS7010: 'd2', which lacks return-type annotation, implicitly has an 'any' return type.
classdecl.ts(74,12): error TS7008: Member 'p3' implicitly has an 'any' type.


==== classdecl.ts (5 errors) ====
    class a {
        //constructor ();
        constructor (n: number);
        constructor (s: string);
        constructor (ns: any) {
    
        }
    
        public pgF() { }
    
        public pv;
               ~~
!!! error TS7008: Member 'pv' implicitly has an 'any' type.
        public get d() {
            return 30;
        }
        public set d(a: number) {
        }
    
        public static get p2() {
            return { x: 30, y: 40 };
        }
    
        private static d2() {
        }
        private static get p3() {
            return "string";
        }
        private pv3;
                ~~~
!!! error TS7008: Member 'pv3' implicitly has an 'any' type.
    
        private foo(n: number): string;
        private foo(s: string): string;
        private foo(ns: any) {
            return ns.toString();
        }
    }
    
    class b extends a {
    }
    
    module m1 {
        export class b {
        }
        class d {
        }
    
    
        export interface ib {
        }
    }
    
    module m2 {
    
        export module m3 {
            export class c extends b {
            }
            export class ib2 implements m1.ib {
            }
        }
    }
    
    class c extends m1.b {
    }
    
    class ib2 implements m1.ib {
    }
    
    declare class aAmbient {
        constructor (n: number);
        constructor (s: string);
        public pgF(): void;
        public pv;
               ~~
!!! error TS7008: Member 'pv' implicitly has an 'any' type.
        public d : number;
        static p2 : { x: number; y: number; };
        static d2();
               ~~
!!! error TS7010: 'd2', which lacks return-type annotation, implicitly has an 'any' return type.
        static p3;
               ~~
!!! error TS7008: Member 'p3' implicitly has an 'any' type.
        private pv3;
        private foo(s);
    }
    
    class d {
        private foo(n: number): string;
        private foo(s: string): string;
        private foo(ns: any) {
            return ns.toString();
        }    
    }
    
    class e {    
        private foo(s: string): string;
        private foo(n: number): string;
        private foo(ns: any) {
            return ns.toString();
        }
    }